fix: swagger methods
